--- a/Code/PerceptronFrontEnd/src/app/getting-started/getting-started.component.html
+++ b/Code/PerceptronFrontEnd/src/app/getting-started/getting-started.component.html
@@ -7,7 +7,7 @@
 
     <mat-card>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
-        <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">Implementation Steps
+        <h5 style="padding-left:0px; font-size:21px; font-weight:bold; font-family: roboto, arial, sans-serif;">Implementation Steps
         </h5>
         <h5 class="header">Step 1 – Basic Parameters</h5><a href="assets/images/Screenshots/1.PNG" class="to_right"
             download="step1"><i class="material-icons" style="vertical-align: text-bottom;">save_alt</i></a>
