--- a/Code/PerceptronFrontEnd/src/app/team/team.component.html
+++ b/Code/PerceptronFrontEnd/src/app/team/team.component.html
@@ -40,60 +40,73 @@
             <mat-card-content>
     
                 
-                <mat-grid-list cols="17" rowHeight="300px">
+                <mat-grid-list cols="17" rowHeight="200px">
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/Safee Ullah Chaudhary.png" width="190" height="190">
-    
-                            <p style="text-align:center;"><b>Safee Ullah Chaudhary</b> Group Leader<br>Assistant Professor,
-                                Lahore
-                                University of Management Sciences</p>
-    
+                            <img src="assets/images/Safee Ullah Chaudhary.png" style="width:200px;height:200px;">    
                         </div>
                     </mat-grid-tile>
     
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/Waqar Nabi.png" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Waqar Nabi</b><br>Assistant Professor, University of Glasgow
-                            </p>
-    
+                            <img src="assets/images/Waqar Nabi.png" style="width:200px;height:200px;">   
                         </div>
                     </mat-grid-tile>
+
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/SohailAsifQureshi.png" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Sohail Asif Qureshi</b><br>Professor, CECOS University of IT
-                                and Emerging Sciences</p>
+                            <img src="assets/images/SohailAsifQureshi.png" style="width:200px;height:200px;">   
                         </div>
                     </mat-grid-tile>
+
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
-    
                         <div>
-                            <img src="assets/images/WIM_VANDERBAUWHEDE.png" width="185" height="175">
-    
-                            <p style="text-align:center;"><b>Wim Vanderbauwhede</b><br>Professor, University of Glasgow</p>
-                        </div>
-    
+                            <img src="assets/images/WIM_VANDERBAUWHEDE.png" style="width:200px;height:200px;">    
+                        </div>    
                     </mat-grid-tile>
                 </mat-grid-list>
-                <mat-grid-list cols="17" rowHeight="300px">
+
+                <mat-grid-list cols="17" rowHeight="110px">
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center;"><b>Safee Ullah Chaudhary</b><br> Group Leader<br>Assistant Professor, Lahore University of Management Sciences</p>
+                    </mat-grid-tile>
+
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center;"><b>Waqar Nabi</b><br>Assistant Professor, University of Glasgow</p>
+                    </mat-grid-tile>
+
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center;"><b>Sohail Asif Qureshi</b><br>Professor, CECOS University of IT and Emerging Sciences</p>
+                    </mat-grid-tile>
+
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center;"><b>Wim Vanderbauwhede</b><br>Professor, University of Glasgow</p>
+                    </mat-grid-tile>
+                </mat-grid-list>
+
+                <mat-grid-list cols="17" rowHeight="200px">
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/TayyabMehmood.png" width="225" height="200">
-    
-                            <p style="text-align:center;"><b>Tayyab Mehmood</b><br>Assistant Professor, University of
-                                Engineering & Technology (Rachna College)</p>
+                            <img src="assets/images/TayyabMehmood.png" style="width:200px;height:200px;">                           
                         </div>
                     </mat-grid-tile>
                     <mat-grid-tile colspan="1"></mat-grid-tile>
+                </mat-grid-list>
+
+                <mat-grid-list cols="17" rowHeight="110px">
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center; vertical-align: text-top;"><b>Tayyab Mehmood</b><br>Assistant Professor, University of Engineering & Technology (Rachna College)</p>
+                    </mat-grid-tile>
                 </mat-grid-list>
     
             </mat-card-content>
@@ -109,77 +122,61 @@
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <mat-card>
             <mat-card-content>
-                <mat-grid-list cols="17" rowHeight="300px">
+                <mat-grid-list cols="17" rowHeight="200px">
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/Farhan.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Muhammad Farhan Khalid</b><br>Research Associate, Lahore
-                                University of Management Sciences</p>
+                            <img src="assets/images/Farhan.jpg" width="200" height="200"> 
                         </div>
                     </mat-grid-tile>
+
+
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/kanz1.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Kanzal Iman</b><br>PhD Student, Lahore University of Management
-                                Sciences</p>
+                            <img src="assets/images/kanz1.jpg" width="200" height="200"> 
                         </div>
                     </mat-grid-tile>
-                    <mat-grid-tile colspan="1"></mat-grid-tile>
-                    <mat-grid-tile colspan="3">
-    
-                        <div>
-                            <img src="assets/images/zonaira.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Zonaira Khalid</b><br>Graduate Student, Lahore University of
-                                Management Sciences</p>
-                        </div>
-                    </mat-grid-tile>
-                    <!-- <mat-grid-tile colspan="1"></mat-grid-tile> -->
-                    <!-- </mat-grid-list> -->
     
                     <mat-grid-tile colspan="1"></mat-grid-tile>
-                    <mat-grid-tile colspan="3">
-    
+                    <mat-grid-tile colspan="3"> 
                         <div>
                             <img src="assets/images/AmnaGhafoor.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Amna Ghafoor</b><br>Research Intern, Lahore University of
-                                Management Sciences</p>
                         </div>
                     </mat-grid-tile>
-    
-                </mat-grid-list>
-                <mat-grid-list cols="17" rowHeight="300px">
+
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
-    
                         <div>
                             <img src="assets/images/MominaAmerAkhter.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Momina Amer Akhter</b><br>Research Intern, Lahore University of
-                                Management Sciences</p>
                         </div>
                     </mat-grid-tile>
-                    <mat-grid-tile colspan="1"></mat-grid-tile>
+                </mat-grid-list>
+
+                <mat-grid-list cols="17" rowHeight="90px">
+                    <mat-grid-tile></mat-grid-tile>
                     <mat-grid-tile colspan="3">
-    
-                        <div>
-                            <img src="assets/images/MuhammadMoazAhmad.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Muhammad Moaz Ahmad</b><br>Research Intern, Lahore University
-                                of
-                                Management Sciences</p>
-                        </div>
+                        <p style="text-align:center;"><b>Muhammad Farhan Khalid</b><br>Research Associate, Lahore University of Management Sciences</p>
                     </mat-grid-tile>
-    
+
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center;"><b>Kanzal Iman</b><br>PhD Student, Lahore University of Management Sciences</p>
+                    </mat-grid-tile>
+
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center;"><b>Amna Ghafoor</b><br>Research Intern, Lahore University of Management Sciences</p>
+                    </mat-grid-tile>
+
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center;"><b>Momina Amer Akhter</b><br>Research Intern, Lahore University of Management Sciences</p>
+                    </mat-grid-tile>
                 </mat-grid-list>
             </mat-card-content>
-    
         </mat-card>
+
         <div style="height:10px;font-size:1px;">&nbsp;</div>
     
     
@@ -191,97 +188,74 @@
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <mat-card>
             <mat-card-content>
-                <mat-grid-list cols="17" rowHeight="300px">
+                <mat-grid-list cols="17" rowHeight="200px">
+
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
                             <img src="assets/images/abdul.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Abdul Rehman Basharat</b><br>Research Associate, Lahore
-                                University of Management Sciences</p>
                         </div>
                     </mat-grid-tile>
+
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/Mujtaba.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Mujtaba Saboor</b><br>Senior Year Project, University of
-                                Engineering & Technology</p>
+                            <img src="assets/images/Mujtaba.jpg" width="200" height="200">    
                         </div>
                     </mat-grid-tile>
-                    <mat-grid-tile colspan="1"></mat-grid-tile>
-                    <mat-grid-tile colspan="3">
-    
-                        <div>
-                            <img src="assets/images/urwa.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Urwa Muaz</b><br>Senior Year Project, University of Engineering
-                                & Technology</p>
-                        </div>
-    
-                    </mat-grid-tile>
+
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/ahsan.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Muhammad Ahsan Ali</b><br>Senior Year Project, University of
-                                Engineering & Technology</p>
+                            <img src="assets/images/urwa.jpg" width="200" height="200">   
+                        </div>
+                    </mat-grid-tile>
+
+                    <mat-grid-tile colspan="1"></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <div>
+                            <img src="assets/images/ahsan.jpg" width="200" height="200"> 
                         </div>
                     </mat-grid-tile>
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                 </mat-grid-list>
-    
-    
-                <mat-grid-list cols="17" rowHeight="300px">
-                       
-                    <mat-grid-tile colspan="1"></mat-grid-tile>
+
+                <mat-grid-list cols="17" rowHeight="90px">
+                    <mat-grid-tile></mat-grid-tile>
                     <mat-grid-tile colspan="3">
-                        <div>
-                            <img src="assets/images/taha.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Taha Tahir</b><br>Senior Year Project, University of
-                                Engineering & Technology</p>
-                        </div>
+                        <p style="text-align:center;"><b>Abdul Rehman Basharat</b><br>Research Associate, Lahore University of Management Sciences</p>
                     </mat-grid-tile>
-                    <mat-grid-tile colspan="1"></mat-grid-tile>
+
+                    <mat-grid-tile></mat-grid-tile>
                     <mat-grid-tile colspan="3">
-                        <div>
-                            <img src="assets/images/AbdulRehman.png" width="190" height="190">
-    
-                            <p style="text-align:center;"><b>Abdul Rehman</b><br>Research Associate, Lahore
-                                University of Management Sciences</p>
-                        </div>
+                        <p style="text-align:center;"><b>Mujtaba Saboor</b><br>Senior Year Project, University of Engineering & Technology</p>
                     </mat-grid-tile>
-                    <mat-grid-tile colspan="1"></mat-grid-tile>
+
+                    <mat-grid-tile></mat-grid-tile>
                     <mat-grid-tile colspan="3">
-                        <div>
-                            <img src="assets/images/shifa.jpeg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Shifa Imran</b><br>Senior Year Project, University of
-                                Engineering & Technology</p>
-                        </div>
+                        <p style="text-align:center;"><b>Urwa Muaz</b><br>Senior Year Project, University of Engineering & Technology</p>
                     </mat-grid-tile>
+
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center;"><b>Muhammad Ahsan Ali</b><br>Senior Year Project, University of Engineering & Technology</p>
+                    </mat-grid-tile>
+                </mat-grid-list>
+    
+    
+                <mat-grid-list cols="17" rowHeight="200px">    
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/ramsha.jpeg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Ramsha Nadeem</b><br>Senior Year Project, University of
-                                Engineering & Technology</p>
+                            <img src="assets/images/taha.jpg" width="200" height="200">      
                         </div>
                     </mat-grid-tile>
                 </mat-grid-list>
-                <mat-grid-list cols="17" rowHeight="300px">
+
+                <mat-grid-list cols="17" rowHeight="90px">
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
-                        <div>
-                            <img src="assets/images/fatima1.jpg" width="200" height="200">
-    
-                            <p style="text-align:center;"><b>Fatima Arshad</b><br>MS Thesis, Lahore University of Management
-                                Sciences</p>
-                        </div>
+                        <p style="text-align:center;"><b>Taha Tahir</b><br>Senior Year Project, University of Engineering & Technology</p>
                     </mat-grid-tile>
                 </mat-grid-list>
     
