--- a/Code/PerceptronFrontEnd/src/app/app.component.html
+++ b/Code/PerceptronFrontEnd/src/app/app.component.html
@@ -213,7 +213,7 @@
 
         <label
           style="display:inline-block; color:#212121;  cursor:pointer;font-size:15px; font-weight:500; letter-spacing:0px; font-family: Roboto, Arial, sans-serif;padding-left: 15px;">
-          Acknowledgment</label>
+          Team</label>
 
       </button>
 
@@ -248,8 +248,8 @@
     <router-outlet></router-outlet>
     <hr>
     <footer>
-      <label style="font-size: small; text-align: center; font-family: roboto, sans-serif, arial;"><a
-          routerLink="/contact"> Contact Us</a> &nbsp;&nbsp; <a href="http://biolabs.lums.edu.pk/birl">(c) 2020
+      <label style="font-size: 15px; text-align: center; font-family: roboto, sans-serif, arial;"><a
+          routerLink="/contact"> Contact Us</a> &nbsp;&nbsp; <a href="http://biolabs.lums.edu.pk/birl">(c) 2021
           Biomedical Informatics Research Laboratory (BIRL)</a></label>
 
       <!-- <label style="font-size: small;  font-family: roboto, sans-serif, arial;"><a href="http://biolabs.lums.edu.pk/birl"> (c) 2020 Biomedical Informatics Research Laboratory (BIRL)</a></label> -->
