--- a/Code/PerceptronFrontEnd/src/app/admin-panel/admin-panel.component.html
+++ b/Code/PerceptronFrontEnd/src/app/admin-panel/admin-panel.component.html
@@ -1,5 +1,5 @@
 <form #formSubmit="ngForm" (ngSubmit)="onSubmit(formSubmit.value);" class="ui form">
-  <div style="width:90%; min-width: 600px; margin:0 auto;">
+  <div id="top" style="width:90%; min-width: 600px; margin:0 auto;">
     <mat-card>
       <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Admin
         Panel</h4>
