--- a/Code/PerceptronFrontEnd/src/app/bug/bug.component.html
+++ b/Code/PerceptronFrontEnd/src/app/bug/bug.component.html
@@ -2,7 +2,7 @@
 class="ui form">
 
 
-<div style="margin:0 auto; min-width: 600px; width:90%;">
+<div  id="top" style="margin:0 auto; min-width: 600px; width:90%;">
 
 
   <mat-card>
