--- a/Code/PerceptronFrontEnd/src/app/getting-started/getting-started.component.html
+++ b/Code/PerceptronFrontEnd/src/app/getting-started/getting-started.component.html
@@ -12,12 +12,12 @@
         <h5 class="header">Step 1 – Basic Parameters</h5><a href="assets/images/Screenshots/1.PNG" class="to_right"
             download="step1"><i class="material-icons" style="vertical-align: text-bottom;">save_alt</i></a>
         <ul>
-            <li>Enter the ‘Protein Search Title’. Browse and upload Data file(s) to search in single or batch modes.
+            <li>Enter the ‘Protein Search Title’. Browse and upload Data file(s) to search in single or batch modes
             </li>
-            <li>Enter intact protein mass (MS1).</li>
-            <li>Browse for the folder containing database(s). </li>
-            <li>Select Database File (e.g. Human). </li>
-            <li>Select the number of candidate protein hits to be received in results.</li>
+            <li>Enter intact protein mass (MS1)</li>
+            <li>Browse for the folder containing database(s) </li>
+            <li>Select Database File (e.g. Human) </li>
+            <li>Select the number of candidate protein hits to be received in results</li>
         </ul>
         <img id="get1" src="assets/images/step_1a.png" width="100%" class="center">
         <div style="height:10px;font-size:1px;">&nbsp;</div>
@@ -33,13 +33,13 @@
         <a href="assets/images/step_2.png" class="to_right" download="step2"><i class="material-icons"
                 style="vertical-align: text-bottom;">save_alt</i></a>
         <ul>
-            <li>Select Mass Mode.</li>
+            <li>Select Mass Mode</li>
             <li>Click ‘Filter Database using MS1’ to filter protein database on the basis of MS1 and ‘Handle Truncated
-                Proteoforms’ to allow search for truncated proteoforms.</li>
+                Proteoforms’ to allow search for truncated proteoforms</li>
             <li>Enter intact mass and peptide tolerances and select ‘Tune Intact Protein Mass’ to allow for tuning of
-                MS1 using MS2 data.</li>
-            <li>Select fragmentation type and corresponding special ions.</li>
-            <li>Incorporate masses of neutral loss, if any.</li>
+                MS1 using MS2 data</li>
+            <li>Select fragmentation type and corresponding special ions</li>
+            <li>Incorporate masses of neutral loss, if any</li>
         </ul>
         <img id="get2" src="assets/images/step_2.png" width="100%;" class="center">
         <div style="height:10px;font-size:1px;">&nbsp;</div>
@@ -52,8 +52,8 @@
         <a href="assets/images/step_3.png" class="to_right" download="step3"><i class="material-icons"
                 style="vertical-align: text-bottom;">save_alt</i></a>
         <ul>
-            <li>Select ‘Enable PST Filtering’ to allow for peptide sequence tag-based search.</li>
-            <li>Select for PST length and tolerance.</li>
+            <li>Select ‘Enable PST Filtering’ to allow for peptide sequence tag-based search</li>
+            <li>Select for PST length and tolerance</li>
         </ul>
         <img id="get3" src="assets/images/step_3.png" width="100%;" class="center">
         <div style="height:10px;font-size:1px;">&nbsp;</div>
@@ -66,9 +66,9 @@
         <a href="assets/images/step_4.png" class="to_right" download="step4"><i class="material-icons"
                 style="vertical-align: text-bottom;">save_alt</i></a>
         <ul>
-            <li>Select ‘Terminal modifications’ to be included in the search.</li>
+            <li>Select ‘Terminal modifications’ to be included in the search</li>
             <li>Select ‘Fixed’ and ‘Variable’ post-translational modifications or click ‘Blind-PTM Search’ to allow
-                search for unknown post-translational modifications.</li>
+                search for unknown post-translational modifications</li>
         </ul>
         <img id="get4" src="assets/images/step_4.png" width="100%;" class="center">
         <div style="height:10px;font-size:1px;">&nbsp;</div>
@@ -81,8 +81,8 @@
         <a href="assets/images/step_5.png" class="to_right" download="step5"><i class="material-icons"
                 style="vertical-align: text-bottom;">save_alt</i></a>
         <ul>
-            <li>Set ‘Scoring Components Weightage’ and click ‘Submit’.</li>
-            <li>Check email for results or go to ‘Search Results & History’ page to view results.</li>
+            <li>Set ‘Scoring Components Weightage’ and click ‘Submit’</li>
+            <li>Check email for results or go to ‘Search Results & History’ page to view results</li>
         </ul>
         <img id="get5" src="assets/images/step_5.png" width="100%;" class="center">
         <div style="height:10px;font-size:1px;">&nbsp;</div>
@@ -92,8 +92,8 @@
             class="to_right" download="step6"><i class="material-icons"
                 style="vertical-align: text-bottom;">save_alt</i></a>
         <ul>
-            <li>Go to ‘Search Results & History’ page to view summary results.</li>
-            <li>Select the protein to see detailed results or check email for results.</li>
+            <li>Go to ‘Search Results & History’ page to view summary results</li>
+            <li>Select the protein to see detailed results or check email for results</li>
         </ul>
         <img id="get5" src="assets/images/step_6a.png" width="100%;" class="center">
         <div style="height:10px;font-size:1px;">&nbsp;</div>
