--- a/Code/PerceptronFrontEnd/src/app/help/help.component.html
+++ b/Code/PerceptronFrontEnd/src/app/help/help.component.html
@@ -1,4 +1,4 @@
-<div style="width:90%; min-width: 900px; margin:0 auto;">
+<div id="top" style="width:90%; min-width: 900px; margin:0 auto;">
                 <mat-card>
                     <label style="text-align:center; font-size: 23px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Help & Manual</label>
                 </mat-card>
@@ -11,6 +11,6 @@
                 <div style="height:10px; font-size:1px;">&nbsp;</div>
                 <mat-card>
                     <!-- <div style="height:10px;font-size:1px;">&nbsp;</div> -->
-                    <p style="font-size:16px;">For further help, download manual from <u><a style="font-style:italic" href="https://github.com/BIRL/PERCEPTRON/tree/master/Documentation">here</a></u></p>
+                    <p style="font-size:16px;">For more details  <u><a style="font-style:italic" href="https://github.com/BIRL/PERCEPTRON/tree/master/Documentation">click here</a></u> to download user manual</p>
                 </mat-card>
             </div>
