--- a/Code/PerceptronFrontEnd/src/app/home/home.component.html
+++ b/Code/PerceptronFrontEnd/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div style="width:94%;  margin:0 auto;">
+<div id="top" style="width:94%;  margin:0 auto;">
     <mat-card style = "height: 100%;padding-top: 2px;">
             <label style="padding-bottom:10px; text-align:center; font-size: 25px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">PERCEPTRON - Proteoform Identification Pipeline for Top-Down Proteomics</label>
             <img src ="assets/images/WebHomepage.jpg" width="70%;" style=" margin-left: auto; margin-right: auto; display: block;" >
