--- a/Code/PerceptronFrontEnd/src/app/repository/repository.component.html
+++ b/Code/PerceptronFrontEnd/src/app/repository/repository.component.html
@@ -1,6 +1,6 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f.value);" (ngReset)="onReset(); f.reset() ;" class="ui form">
 
- <div style="width:90%; min-width: 600px; margin:0 auto;">
+ <div id="top" style="width:90%; min-width: 600px; margin:0 auto;">
     <mat-card>
       <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Sample Protein Data</h4>
     </mat-card>
