--- a/Code/PerceptronFrontEnd/src/app/scan-view/scan-view.component.html
+++ b/Code/PerceptronFrontEnd/src/app/scan-view/scan-view.component.html
@@ -1,4 +1,4 @@
-<div class="loader"></div>
+<div id="top" class="loader"></div>
 <div style="width:90%; min-width: 600px; margin:0 auto;">
   <mat-card>
     <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Protein
