--- a/Code/PerceptronFrontEnd/src/app/signup/signup.component.html
+++ b/Code/PerceptronFrontEnd/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div style="width:20%; min-width:350px; margin:0 auto;">
+<div id="top" style="width:20%; min-width:350px; margin:0 auto;">
 <mat-card style="width:100%; margin:0 auto;">
 
   <mat-card-header  style="padding:0px; width:100%;">
