--- a/Code/PerceptronFrontEnd/src/app/spectralcount/spectralcount.component.html
+++ b/Code/PerceptronFrontEnd/src/app/spectralcount/spectralcount.component.html
@@ -5,7 +5,7 @@
   <br>
   <div class="example-header">
     <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+      <input matInput style="font-size:18px"  (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
   </div>
 
