--- a/Code/PerceptronFrontEnd/src/app/team/team.component.html
+++ b/Code/PerceptronFrontEnd/src/app/team/team.component.html
@@ -1,4 +1,4 @@
-<div style="width:90%; min-width: 900px; margin:0 auto;">
+<div id="top" style="width:90%; min-width: 900px; margin:0 auto;">
         <!-- div.LineHeight{
                 line-height: 0.5;
             }
@@ -96,16 +96,25 @@
                     <mat-grid-tile colspan="1"></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <div>
-                            <img src="assets/images/TayyabMehmood.png" style="width:200px;height:200px;">                           
+                            <img src="assets/images/TayyabMehmood.png" style="width:200px;height:200px;">                          
                         </div>
                     </mat-grid-tile>
                     <mat-grid-tile colspan="1"></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <div>
+                            <img src="assets/images/SyedAhmadChan.jpg" style="width:200px;height:200px;">                          
+                        </div>
+                    </mat-grid-tile>
                 </mat-grid-list>
 
                 <mat-grid-list cols="17" rowHeight="110px">
                     <mat-grid-tile></mat-grid-tile>
                     <mat-grid-tile colspan="3">
                         <p style="text-align:center; vertical-align: text-top;"><b>Tayyab Mehmood</b><br>Assistant Professor, University of Engineering & Technology (Rachna College)</p>
+                    </mat-grid-tile>
+                    <mat-grid-tile></mat-grid-tile>
+                    <mat-grid-tile colspan="3">
+                        <p style="text-align:center; vertical-align: text-top;"><b>Syed Ahmad Chan Bukhari</b><br>Assistant Professor, St. John's University</p>
                     </mat-grid-tile>
                 </mat-grid-list>
     
