--- a/Code/PerceptronFrontEnd/src/app/about/about.component.html
+++ b/Code/PerceptronFrontEnd/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-    <div style="width:92%;  margin:0 auto;">
+    <div id="top" style="width:92%;  margin:0 auto;">
     <mat-card style = "height: 100%">
         <label style="text-align:center; font-size: 25px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">PERCEPTRON - Proteoform Identification Pipeline for Top-Down Proteomics</label>
     </mat-card>
