--- a/Code/PerceptronFrontEnd/src/app/contact/contact.component.html
+++ b/Code/PerceptronFrontEnd/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div style="width:80%; min-width: 600px; margin:0 auto;">
+<div  id="top" style="width:80%; min-width: 600px; margin:0 auto;">
     
     <mat-card>
             <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Contact</h4>
