--- a/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
@@ -1,4 +1,4 @@
-<div style="width:90%; min-width: 600px; margin:0 auto;">
+<div id="top" style="width:90%; min-width: 600px; margin:0 auto;">
 
   <mat-card>
     <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Detailed
@@ -8,7 +8,7 @@
 
   <mat-expansion-panel [expanded]="true">
     <mat-expansion-panel-header style="background-color:rgba(0,0,0,.1); color:Black;">
-      <mat-panel-title style="font-size:large;  color:Black;">
+      <mat-panel-title style="font-size:large; font-weight: bold; color:Black;">
         User Search Parameters
       </mat-panel-title>
     </mat-expansion-panel-header>
