--- a/Code/PerceptronFrontEnd/src/app/email/email.component.html
+++ b/Code/PerceptronFrontEnd/src/app/email/email.component.html
@@ -1,4 +1,4 @@
-<div style="width:20%; min-width:350px; margin:0 auto;">
+<div id="top" style="width:20%; min-width:350px; margin:0 auto;">
   <mat-card style="width:100%;">
     <mat-card-content>
 
