--- a/Code/PerceptronFrontEnd/src/app/patterngenerator/patterngenerator.component.html
+++ b/Code/PerceptronFrontEnd/src/app/patterngenerator/patterngenerator.component.html
@@ -2,7 +2,7 @@
 class="ui form">
 
 
-<div style="width:90%; min-width: 600px; margin:0 auto;">
+<div id="top" style="width:90%; min-width: 600px; margin:0 auto;">
    
 
   <mat-card>
