--- a/Code/PerceptronFrontEnd/src/app/summary-results/summary-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/summary-results/summary-results.component.html
@@ -1,4 +1,4 @@
-<div style="width:90%; min-width: 600px; margin:0 auto;">
+<div id="top"  style="width:90%; min-width: 600px; margin:0 auto;">
     <mat-card>
       <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Summary Results View</h4>
     </mat-card>
