Updated pop-up windows

--- a/Code/PerceptronFrontEnd/src/app/bug/bug.component.html
+++ b/Code/PerceptronFrontEnd/src/app/bug/bug.component.html
@@ -16,7 +16,9 @@ class="ui form">
   <br>
       <mat-card>
           <div style="height:10px;font-size:1px;">&nbsp;</div>
-          <p style="font-size:18px;">For suggestions and bug reports please visit at <a href="https://github.com/BIRL/PERCEPTRON/issues">here</a></p>
+          <p style="font-size:16px;">Thank you for using PERCEPTRON! You can help improve PERCEPTRON with your feedback. If you are encounter any issues while using PERCEPTRON please report <a href="https://github.com/BIRL/PERCEPTRON/issues">here.</a></p>
+
+
 
           <!-- <p style="font-size:18px;">For suggestions and bug report please visit at <a href"https://github.com/BIRL/PERCEPTRON/issues">fsd</p> -->
           <!-- <mat-form-field style="width: 100%;">
