--- a/Code/PerceptronFrontEnd/src/app/help/help.component.html
+++ b/Code/PerceptronFrontEnd/src/app/help/help.component.html
@@ -11,6 +11,9 @@
                 <div style="height:10px; font-size:1px;">&nbsp;</div>
                 <mat-card>
                     <!-- <div style="height:10px;font-size:1px;">&nbsp;</div> -->
-                    <p style="font-size:16px;">For more details  <u><a style="font-style:italic" href="https://github.com/BIRL/PERCEPTRON/tree/master/Documentation">click here</a></u> to download user manual</p>
+                    <p style="font-size:16px;">For more information on using PERCEPTRON, please refer to our <u><a style="font-style:italic" href="https://github.com/BIRL/PERCEPTRON/tree/master/Documentation">video tutorials</a></u> or visit
+                        <u><a style="font-style:italic" href="https://perceptron.lums.edu.pk/index.html#/youtube">here</a></u> to download user manual and step by step guide.</p>
                 </mat-card>
             </div>
+
+
