--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
@@ -31,47 +31,7 @@
       <mat-grid-tile></mat-grid-tile>
 
       <mat-grid-tile colspan="15">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-          <style>
-            div.example {
-              background-color: lightgrey;
-              padding: 20px;
-            }
-            
-            @media screen and (min-width: 901px) {
-              div.example {
-                text-align:center;
-              }
-            }
-            
-            @media screen and (max-width: 900px) {
-              div.example {
-                text-align:left;
-              }
-            }
-          </style>
-        <div class='example'>
-          <h6 style="text-align:center; font-weight:bold">Legends</h6>
-          <p style='font-size: 16px; line-height:15px;'><span style="color: red">&piv;</span> <span style="color: black">Phosphorylation</span> <span style="padding-left: 20px; color: red"> &omega;</span> <span style="color: black">DiMethylation</span> <span style="padding-left: 42px; color: red;"> &Psi;</span> <span style="color: black; padding-right:105px">Methylation</span> <span style='display:inline-block'><span style="color: red"> &alpha;</span> <span style="color: black; padding-right: 30px;">Acetylation</span></span> </p>
-          <p style='font-size: 16px; line-height:15px'><span style="color: red">&theta;</span> <span style="color: black">Hydroxylation</span> <span style="padding-left: 41px; color: red"> &otimes;</span> <span style="color: black">DiHydroxylation</span> <span style="padding-left: 20px; color: red;"> &oplus;</span> <span style="color: black; padding-right:20px">O-Linked-Glycosylation</span> <span style='display:inline-block'><span style="color: red;"> &Oslash;</span> <span style="color: black; padding-right: 40px;">Sulfoxide</span></span> </p>
-          <p style='font-size: 16px; line-height:15px'><span style="color: red">&nabla;</span> <span style="color: black">Glutathionylation</span> <span style="padding-left: 18px; color: red"> &Delta;</span> <span style="color: black">Methylation<sub>K</sub></span> <span style="padding-left: 50px; color: red;"> &clubs;</span> <span style="color: black; padding-right:82px">S-Nitrosylation</span> <span style='display:inline-block'><span style="color: red;"> &hearts;</span> <span style="color: black; padding-right: 5px;">Palmitoylation</span></span> </p>
-          <p style='font-size: 16px; line-height:15px'><span style="color: red">&spades;</span> <span style="color: black">Formylation</span> <span style="padding-left: 58px; color: red"> &loz;</span> <span style="color: black">Nitration</span> <span style="padding-left: 75px; color: red;"> &real;</span> <span style="color: black; padding-right:23px">N-Linked-Glycosylation</span> <span style='display:inline-block'><span style="color: red;"> &zeta;</span> <span style="color: black; padding-right: 53px;">Sulfone</span></span> </p>
-          <p style='font-size: 16px; line-height:15px'><span style="color: red">&perp;</span> <span style="color: black">Pyruvate</span> <span style="padding-left: 76px; color: red"> &or;</span> <span style="color: black">Pyrrolidone-Aarboxylic-Acid</span> <span style="padding-left: 20px; color: red;"> &omega;</span> <span style="color: black; padding-right: 15px;">Gamma-Carboxyglutamic-Acid</span></p>
-
-          <p style=' line-height:20px'><span style="color: red">*</span> <span style="color: black">Blind PTM Mass</span> <span style="color:blue; padding-left:27px"><b>*</b>Peptide Sequence Tag</span> <span style="color:rgb(220, 105, 224); padding-left:28px"><b>*</b>Amino Acids - Possible Blind PTM Sites</span>
-          
-          <!-- <p style="color:blue;"><b>*</b>     Peptide Sequence Tag</p>
-          <p style="color:rgb(220, 105, 224);"><b>*</b>     Amino Acids - Possible Blind PTM Sites</p> -->
-
-          <p style='line-height:15px'> <span style="color:red;"><b><s>X</s></b>Truncated Amino Acid</span> <span style="color:black; padding-left:72px; padding-right: 195px;"><b>]</b>N-terminal Fragment Match</span></p>
-          <!-- <p style="color:black;"><b>]</b>      N-terminal Fragment Match</p> -->
-          <p> <span style="color:black;"><b>[</b>C-terminal Fragment Match</span> <span style="color:black; padding-left:40px; padding-right: 145px;"><b>A<sub>n</sub>]/[A<sub>n</sub></b>An Amino Acid with its index</span></p>
-          <!-- <p style="color:black;"><b>A<sub>n</sub>]/[A<sub>n</sub></b>      An Amino Acid with its index</p> -->
-
-          <p style="color:rgba(255, 0, 0, 0.787); line-height:15px;"><b>Experimental Mass</b><span style="color:green; height:15px; padding-left: 40px; padding-right:335px"><b>Theoretical Mass</b></span></p>
-
-          <p style="color:black; padding-right: 195px;line-height:15px"><b>Mass Difference between Experimental and Theoretical Peaks</b></p>
-        </div>
+        <img src="assets/images/Legends.PNG" style="width:40vw;height:20vw;">
       </mat-grid-tile>
     </mat-grid-list>
     <!-- <div  class='inner' style="float:left"> -->
