--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
@@ -20,6 +20,13 @@
   <div id="top" style="height:10px;font-size:1px;">&nbsp;</div> 
 
   <mat-card>
+    <h6 style="text-align:center; font-weight:bold">Detailed Protein Hit View</h6>
+    <div style="display:flex; align-items: flex-start;">
+      <div style="margin:20px; align-self: center;"><img [src]="ImageFilePath"></div>
+      <div style="margin:20px; align-self: center;"><img src="assets/images/Legends.PNG"></div>
+    </div>
+  </mat-card>
+  <!-- <mat-card>
     <h6 style="text-align:center; font-weight:bold; font-size:13pt">Detailed Protein Hit View</h6>
     <mat-grid-list cols="31" rowHeight="65px">
       <mat-grid-tile colspan="18" rowspan="10">
@@ -34,7 +41,7 @@
         <img src="assets/images/Legends.PNG" style="width:45vw;height:25vw;">
       </mat-grid-tile>
     </mat-grid-list>
-  </mat-card>
+  </mat-card> -->
 
   <div style="height:10px;font-size:1px;">&nbsp;</div>
 
